--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<section class="section">
+    <h1 class="title">Welcome</h1>
 
-    <h1>Welcome</h1>
+
+    <p>This webapplication was made by Marcus Gustafsson as an assignment
+        in the course Web Intelligence at Linneaus University.
+
+        The app gets recommendations for movies, from a test database,
+        according to ratings and two algorithms: Euclidean Similarity and Pearson Correlation</p>
+    
+</section>
 {% endblock %}
